--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,3 +1,11 @@
-<div>
-    <h1>header addedd</h1>
-</div>
+<header>
+    <div>
+        <h1>Habit Tracker</h1>
+    </div>
+    <div>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/weekview">Weekly View</a></li>
+        </ul>
+    </div>
+</header>
