creating new habit in database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,5 +10,12 @@
 
     <%- include("header") -%>
 
+    <div>
+        <form action="create/habit" method="POST">
+            <input type="text" placeholder="Enter Habit" name="name">
+            <button type="submit">Add Habit</button>
+        </form>
+    </div>
+
 </body>
 </html>
