--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
                     <span>Completed:</span> <%= i.Completed %> / <%= i.Days.length %> </br>
                     <span>Longest Streak:</span><%= i.Streak %>
                 </div>
-                <a href="delete/<%= i.id %>">Delete</a>          
+                <a href="/delete/<%= i.id %>">Delete</a>          
             </div>
         <% } %>
     </main>
