--- a/views/week.ejs
+++ b/views/week.ejs
@@ -1,5 +1,6 @@
 <%const monthNames = ["January", "February", "March", "April", "May", "June",
 "July", "August", "September", "October", "November", "December"]; %>
+<% console.log("view",habitList) %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
