--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,19 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <!-- css link -->
+    <link rel="stylesheet" href="css/home.css">
+
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <%- include("header") -%>
 
-    <div>
-        <div>
-            <h1>Let's Start a new Habit</h1>
+    <div class="border border-secondary half mx-auto mt-5" >
+        <div class="border-bottom border-secondary">
+            <h3 class="text-center my-3" >Let's Start a new Habit</h3>
         </div>
-        <form action="create/habit" method="POST">
-            <input type="text" placeholder="Enter Habit" name="name">
+        <form class="text-center my-4 " action="create/habit" method="POST">
+            <input class="sixty" type="text" placeholder="Enter Habit" name="name">
             <button type="submit">Add Habit</button>
         </form>
     </div>
