--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,13 +20,13 @@
 
     <%- include("header") -%>
 
-    <div class="border border-secondary half mx-auto mt-5" >
+    <div class="border border-secondary half mx-auto mt-5 " >
         <div class="border-bottom border-secondary">
             <h3 class="text-center my-3" >Let's Start a new Habit</h3>
         </div>
-        <form class="text-center my-4 " action="create/habit" method="POST">
+        <form class="text-center my-4 p-2" action="create/habit" method="POST">
             <input class="sixty" type="text" placeholder="Enter Habit" name="name">
-            <button type="submit">Add Habit</button>
+            <button class="btn btn-dark mx-3" type="submit">Add Habit</button>
         </form>
     </div>
     <main>
