--- a/views/week.ejs
+++ b/views/week.ejs
@@ -10,6 +10,7 @@
 
      <!-- css link -->
     <link rel="stylesheet" href="css/week.css">
+
      <!-- bootstrap css link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -21,48 +22,55 @@
 <body>
 
     <%- include("header") -%>
+    <main class="my-5" style="height: 80vh;">
+            <div >
 
-    <main>
+                <table class="table table-striped table-hover table-bordered "> 
+                    <thead class="table-info ">
+                        <tr>
+                            <th>Habit Name</th>
+                            <th><%= new Date().getDate()-6 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate()-5 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate()-4 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate()-3 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate()-2 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate()-1 %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <th><%= new Date().getDate() %>-<%= monthNames[new Date().getMonth()] %></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% for(let i of habitList){ %>
+                            <tr>
+                                <th> <%= i.Name %> </th>
+                                <% for(let j=0 ;j<i.Days.length;j++) {%>
+                                    <td>
+                                        <div class="input-group mb-3">
+                                            <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true" style="width: 90%;"><%= i.Days[j] %></button>
 
-        <table border="1"> 
-            <thead>
-                <tr>
-                    <th>Habit Name</th>
-                    <th><%= new Date().getDate()-6 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate()-5 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate()-4 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate()-3 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate()-2 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate()-1 %>-<%= monthNames[new Date().getMonth()] %></th>
-                    <th><%= new Date().getDate() %>-<%= monthNames[new Date().getMonth()] %></th>
-                </tr>
-            </thead>
-            <tbody>
-                <% for(let i of habitList){ %>
-                    <tr>
-                        <th> <%= i.Name %> </th>
-                        <% for(let j=0 ;j<i.Days.length;j++) {%>
-                            <td>
-                                <button>
-                                    <%= i.Days[j] %>
-                                </button>
-                                <div>
-                                    <a href="/weekView/update/<%= i.id %>/<%= j %>/Completed ">Completed</a>
-                                    <a href="/weekView/update/<%= i.id %>/<%= j %>/Incomplete ">Incomplete</a>
-                                    <a href="/weekView/update/<%= i.id %>/<%= j %>/None ">None</a>
-                                </div>    
-                            
-                            </td>
-                            
-                        <% } %>
-                    </tr>
+                                            <ul class="dropdown-menu index" aria-labelledby="dropdownMenuButton" style="z-index: 2;">
+                                            <li><a class="dropdown-item " href="/weekView/update/<%= i.id %>/<%= j %>/Completed ">Complete</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="/weekView/update/<%= i.id %>/<%= j %>/Incomplete ">Incomplete</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="/weekView/update/<%= i.id %>/<%= j %>/None ">None</a></li>
+                                            </ul>
+                                        </div>   
+                                    
+                                    </td>
+                                    
+                                <% } %>
+                            </tr>
 
-                <% }%>
-            </tbody>
-        </table>
+                        <% }%>
+                    </tbody>
+                </table>
+            </div>
     </main>
        <!-- bootstrap js link -->
        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+       <!-- js script -->
+       <script src="js/week.js"></script>
 </body>
 </html>
