--- a/views/week.ejs
+++ b/views/week.ejs
@@ -23,7 +23,7 @@
 
     <%- include("header") -%>
     <main class="my-5" style="height: 80vh;">
-            <div >
+            <div id="myTable">
 
                 <table class="table table-striped table-hover table-bordered "> 
                     <thead class="table-info ">
