--- a/assets/css/week.css
+++ b/assets/css/week.css
@@ -5,3 +5,17 @@
 .index{
     z-index: 20!important; 
 }
+
+@media (min-width: 750px) { 
+    #myTable{
+        overflow: visible;
+    } 
+}
+
+
+@media (max-width: 700px) { 
+    #myTable{
+        overflow: auto;
+    }
+ }
+
