--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
 
     <%- include("header") -%>
 
-    <div class="border border-secondary half mx-auto mt-5 " >
+    <div id="input-form" class="border border-secondary half mx-auto mt-5 " >
         <div class="border-bottom border-secondary">
             <h3 class="text-center my-3" >Let's Start a new Habit</h3>
         </div>
