--- a/views/week.ejs
+++ b/views/week.ejs
@@ -21,7 +21,10 @@
 </head>
 <body>
 
+    <!-- navbar body -->
     <%- include("header") -%>
+
+    <!-- weekview table -->
     <main class="my-5" style="height: 80vh;">
             <div id="myTable">
 
