--- a/assets/css/week.css
+++ b/assets/css/week.css
@@ -6,6 +6,8 @@
     z-index: 20!important; 
 }
 
+
+/* responsive css code */
 @media (min-width: 750px) { 
     #myTable{
         overflow: visible;
