--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,9 +17,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-
+      <!-- navbar body -->
     <%- include("header") -%>
 
+    <!-- add habit form body -->
     <div id="input-form" class="border border-secondary half mx-auto mt-5 " >
         <div class="border-bottom border-secondary">
             <h3 class="text-center my-3" >Let's Start a new Habit</h3>
@@ -30,6 +31,7 @@
         </form>
     </div>
 
+    <!-- habits container -->
     <main class="border border-secondary w-6 mx-auto my-5 p-4">
         <h1  class="text-center my-auto border-bottom border-secondary p-3" >Habits</h1>
 
@@ -56,6 +58,7 @@
               </div>
         <% } %>
     </main>
+    
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
