--- a/views/week.ejs
+++ b/views/week.ejs
@@ -1,5 +1,4 @@
-<%const monthNames = ["January", "February", "March", "April", "May", "June",
-"July", "August", "September", "October", "November", "December"]; %>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,13 +31,9 @@
                     <thead class="table-info ">
                         <tr>
                             <th>Habit Name</th>
-                            <th><%= new Date().getDate()-6 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate()-5 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate()-4 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate()-3 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate()-2 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate()-1 %>-<%= monthNames[new Date().getMonth()] %></th>
-                            <th><%= new Date().getDate() %>-<%= monthNames[new Date().getMonth()] %></th>
+                            <% for(let d of days){%>
+                                <th><%=d%></th>
+                            <%}%>
                         </tr>
                     </thead>
                     <tbody>
